# pyomega

./: CMakeLists.txt  LICENSE  README.md  build.py  pyproject.toml
src/chill/omega/: OmegaLib.cpp
src/omega/: CMakeLists.txt  OmegaLib.cpp  OmegaLib.hpp  cleanup.sh  setup.py
src/omega/bindings/: CMakeLists.txt
src/omega/chill/omega/: CMakeCache.txt
src/pyomega/: __init__.py  console.py  flutter.py  ir.py  parser.py  passes.py  visit.py
tests/: c_test.c  noxfile.py  test_codegen.py  test_console.py  test_flutter.py  test_ir.py  test_parser.py  test_passes.py  test_visit.py
