[tool.poetry]
authors = ["Eddie Davis <eddied@vulcan.com>"]
description = "Python wrapper for Omega polyhedral compiler"
homepage = "https://github.com/eddie-c-davis/pyomega"
keywords = ["omega polyhedral compiler"]
license = "MIT"
name = "pyomega"
readme = "README.md"
repository = "https://github.com/eddie-c-davis/pyomega"
version = "0.1.0"
# build = "build.py"

[tool.poetry.dependencies]
black = "^20.8b1"
click = "^7.1.2"
flake8 = "^3.8.4"
pybind11 = "^2.6.0"
python = "^3.7"
setuptools-cpp = "^0.1.0"
astor = "^0.8.1"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^5.3"}
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0", "wheel", "setuptools-cpp"]

[tool.poetry.scripts]
pyomega = "pyomega.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pyomega"]

[tool.coverage.report]
show_missing = true
